# skeleton

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.yml  gitman.yml  pyproject.toml
docs/: index.md
samples/conf/: odoo14.conf
