[project]
name = ""
version = ""
description = ""
authors = [
    {name = "holdenrehg", email = "holdenrehg@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
